--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -34,7 +34,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="55dp"
-            android:text="UserName"
+            android:text="@string/app_name"
             android:textColor="#000"
             android:textSize="25sp" />
 
@@ -67,19 +67,21 @@
                     android:id="@+id/count"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="220dp"
+                    android:layout_marginStart="220dp"
                     android:layout_marginTop="10dp"
-                    android:text="Count"
-                    android:textSize="25dp" />
+                    android:text="@string/count"
+                    android:textSize="25sp"
+                    android:layout_marginLeft="220dp" />
 
                 <TextView
                     android:id="@+id/art"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
+                    android:layout_marginStart="10dp"
                     android:layout_marginTop="10dp"
-                    android:text="No Of Article"
-                    android:textSize="25sp" />
+                    android:text="@string/no_of_article"
+                    android:textSize="25sp"
+                    android:layout_marginLeft="10dp" />
 
 
             </android.support.v7.widget.CardView>
@@ -98,27 +100,12 @@
                     android:id="@+id/aboutMe"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Information technology (IT) is the application of computers to store, retrieve, transmit and manipulate data, or information, often in the context of a business or other enterprise. IT is considered to be a subset of information and communications technology (ICT)."
+                    android:text="@string/sample_text"
                     android:textColor="#5c0707"
                     android:textSize="20sp" />
 
             </android.support.v7.widget.CardView>
 
-            <Button
-                android:id="@+id/LogOut"
-                style="@style/Base.Widget.AppCompat.Button.Borderless"
-                android:layout_width="320dp"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/editor"
-                android:layout_centerHorizontal="true"
-                android:background="@color/colorAccent"
-                android:text="LOGOUt"
-                android:foreground="?attr/selectableItemBackgroundBorderless"
-                android:layout_marginTop="15dp"
-                android:textColor="#fff"
-                android:textSize="18sp"
-
-                />
 
             <Button
                 android:id="@+id/editor"
@@ -130,7 +117,7 @@
                 android:layout_below="@+id/AboustUsId"
                 android:background="@color/colorAccent"
                 android:foreground="?attr/selectableItemBackgroundBorderless"
-                android:text="editor"
+                android:text="@string/editor"
                 android:textColor="#fff"
                 android:textSize="18sp"
 
