--- a/app/src/main/res/layout/article_layout.xml
+++ b/app/src/main/res/layout/article_layout.xml
@@ -21,10 +21,11 @@
                 android:text="@string/title_Text_article"
                 android:textSize="18sp"
                 android:textColor="#000"
-                android:layout_marginLeft="5dp"
+                android:layout_marginStart="5dp"
                 android:layout_marginTop="10dp"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp" />
 
             <TextView
                 android:id="@+id/authorTextArticle"
@@ -37,14 +38,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
-            <Button
-                android:id="@+id/articleButton"
-                android:layout_below="@+id/titleTextContent"
-                android:layout_marginLeft="250dp"
-                android:text="read.."
 
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
 
         </RelativeLayout>
     </android.support.v7.widget.CardView>
