--- a/app/src/main/res/layout/register_page.xml
+++ b/app/src/main/res/layout/register_page.xml
@@ -7,13 +7,10 @@
 
     tools:context="com.example.regis.medsystem.VolleyExample">
 
-
-
     <TextView
         android:id="@+id/title_volley"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
         android:layout_centerHorizontal="true"
         android:layout_marginTop="22dp"
         android:text="@string/app_name"
@@ -23,11 +20,10 @@
     <EditText
         android:id="@+id/input"
         android:layout_width="320dp"
-
         android:layout_height="60dp"
         android:layout_below="@+id/title_volley"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="10dp"
 
 
         android:textColorHint="#d92d2d"
@@ -90,13 +86,25 @@
         android:maxLength="10"
         android:textSize="20sp" />
 
+    <EditText
+        android:id="@+id/bio"
+        android:hint="@string/bio"
+        android:gravity="top|center"
+        android:textColorHint="#d92d2d"
+        android:inputType="text"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/phoneNo"
+        android:layout_width="320dp"
+        android:layout_height="100dp" />
+
+
     <Button
         android:id="@+id/register"
         android:layout_width="320dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/phoneNo"
+        android:layout_below="@+id/bio"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:background="#82001a"
         android:text="@string/Register"
         android:textColor="#f4eeee"
