--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -24,29 +24,44 @@
     </android.support.design.widget.AppBarLayout>
 
     <LinearLayout
+        android:id="@+id/linea"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/title_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="55dp"
-            android:text="@string/app_name"
-            android:textColor="#000"
-            android:textSize="25sp" />
+        <android.support.v7.widget.CardView
 
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/circleImage"
-            android:layout_width="96dp"
-            android:layout_height="96dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="10dp"
-            android:src="@drawable/profileicon"
-            app:civ_border_color="#FF000000"
-            app:civ_border_width="2dp" />
+            android:layout_marginTop="60dp"
+            android:layout_width="match_parent"
+            android:layout_height="150dp">
+
+            <RelativeLayout
+                android:id="@+id/imageBody"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:id="@+id/title_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+
+                    android:layout_below="@+id/circleImage"
+                    android:text="@string/app_name"
+                    android:textColor="#000"
+                    android:textSize="25sp" />
+
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/circleImage"
+                    android:layout_width="96dp"
+                    android:layout_height="96dp"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="20dp"
+                    android:src="@drawable/profileicon"
+                    app:civ_border_color="#FF000000"
+                    app:civ_border_width="2dp" />
+            </RelativeLayout>
+        </android.support.v7.widget.CardView>
 
 
         <RelativeLayout
@@ -101,7 +116,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/sample_text"
-                    android:textColor="#5c0707"
+                    android:textColor="#000"
                     android:textSize="20sp" />
 
             </android.support.v7.widget.CardView>
