--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -2,22 +2,23 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="200dp"
-    android:background="@drawable/navimage"
+    android:background="@drawable/navimage">
 
-    android:orientation="vertical">
-
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/profile_pic_nav"
+        android:layout_marginTop="50dp"
+        android:src="@drawable/profileicon"
+        android:layout_width="96dp"
+        android:layout_height="96dp" />
     <TextView
         android:id="@+id/title_header"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="37dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginStart="20dp"
+        android:layout_below="@+id/profile_pic_nav"
+        android:layout_marginTop="5dp"
+        android:layout_marginLeft="15dp"
         android:fontFamily="monospace"
-        android:text=""
+        android:text="@string/app_name"
         android:textColor="#fcf9f9"
         android:textSize="23sp" />
 
