--- a/app/src/main/res/menu/nav_item.xml
+++ b/app/src/main/res/menu/nav_item.xml
@@ -15,24 +15,24 @@
 
     </group>
     <item
-        android:title="@string/details"
-        android:id="@+id/mainMenu">
+        android:id="@+id/mainMenu"
+        android:title="@string/details">
         <menu>
             <!--<item-->
             <!--android:id="@+id/AboustUs"-->
             <!--android:icon="@drawable/ic_people"-->
             <!--android:title="About Us" />-->
-
-            <item
-                android:id="@+id/logout"
-                android:title="@string/logout"
-                android:visible="false"
-                android:icon="@drawable/logout" />
             <item
                 android:id="@+id/manage"
+                android:icon="@drawable/ic_settings_black_24dp"
                 android:title="@string/Account"
-                android:visible="false"
-                android:icon="@drawable/ic_settings_black_24dp" />
+                android:visible="false" />
+            <item
+                android:id="@+id/logout"
+                android:icon="@drawable/logout"
+                android:title="@string/logout"
+                android:visible="false" />
+
 
         </menu>
     </item>
