--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -47,34 +47,37 @@
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
-        android:layout_width="match_parent"
         android:id="@+id/layoutPassword"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="15dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/layoutUsername"
-        android:layout_height="wrap_content">
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="76dp">
 
         <android.support.design.widget.TextInputEditText
             android:id="@+id/passwordogin"
             android:layout_width="320dp"
             android:layout_height="60dp"
             android:hint="@string/password"
-            android:textColorHint="@color/colorAccent"
-            android:inputType="textPassword" />
+            android:inputType="textPassword"
+            android:textColorHint="@color/colorAccent" />
     </android.support.design.widget.TextInputLayout>
 
 
     <Button
         android:id="@+id/login"
-        android:layout_marginTop="22dp"
-        android:layout_centerHorizontal="true"
-        android:background="@color/colorPrimary"
         style="@style/Widget.AppCompat.Button.Borderless"
-        android:text="Login"
-        android:textSize="18sp"
-        android:textColor="#ffff"
-        android:layout_below="@+id/layoutPassword"
         android:layout_width="320dp"
-        android:layout_height="60dp" />
+        android:layout_height="60dp"
+        android:layout_below="@+id/layoutPassword"
+        android:layout_alignEnd="@+id/appbarLogin"
+        android:layout_marginTop="155dp"
+        android:layout_marginEnd="20dp"
+        android:background="@color/colorPrimary"
+        android:text="Login"
+        android:textColor="#ffff"
+        android:textSize="18sp"
+        android:layout_alignRight="@+id/appbarLogin"
+        android:layout_marginRight="20dp" />
 
 </RelativeLayout>
