--- a/app/src/main/res/layout/bottomsheet.xml
+++ b/app/src/main/res/layout/bottomsheet.xml
@@ -1,155 +1,101 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/bottom_sheet"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".medicine.MedicineActivity"
+    app:behavior_hideable="false"
+    app:behavior_peekHeight="90dp"
+    app:cardElevation="4dp"
+    app:cardCornerRadius="2dp"
+    app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
 
 
     >
-
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:cardElevation="4dp"
-        app:cardCornerRadius="4dp"
-
-
-        android:fitsSystemWindows="true">
-
-        <ScrollView android:id="@+id/scroll"
+        android:layout_height="wrap_content">
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#d26161"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior">
+            android:fitsSystemWindows="true">
 
-            <RelativeLayout
-                android:id="@+id/mainBody"
+
+            <TextView
+                android:id="@+id/med_Name_bottom"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="1dp"
+                android:text="Name  :"
+                android:textColor="#000"
+                android:textSize="25sp" />
+
+            <TextView
+                android:id="@+id/Name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="75dp"
+                android:gravity="start"
+                android:layout_toRightOf="@+id/med_Name_bottom"
+                android:text="Crocin"
+                android:textColor="#000"
+                android:textSize="25sp" />
+
+            <TextView
+                android:id="@+id/botton_price"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/med_Name_bottom"
+                android:layout_marginTop="25dp"
+                android:text="App Size"
+                android:textColor="#000"
+                android:textSize="25sp" />
+
+            <TextView
+                android:id="@+id/botton_price_name"
+
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBaseline="@+id/botton_price"
+                android:layout_alignBottom="@+id/botton_price"
+                android:layout_alignEnd="@+id/Name"
+                android:gravity="start"
+                android:layout_marginLeft="75dp"
+                android:layout_alignRight="@+id/Name"
+                android:text="₹5"
+                android:textColor="#000"
+                android:textSize="25sp" />
+
+            <TextView
+                android:id="@+id/category"
+                android:text="Category"
+                android:layout_marginTop="25dp"
+                android:textColor="#000"
+                android:textSize="25sp"
+                android:layout_below="@+id/botton_price_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/category_name"
+                android:text="Free App"
+                android:textColor="#000"
+                android:textSize="25sp"
+                android:gravity="start"
+                android:layout_below="@+id/botton_price_name"
+                android:layout_toRightOf="@+id/category"
+                android:layout_alignBaseline="@+id/category"
+                android:layout_marginLeft="70dp"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <TextView
-                    android:id="@+id/med_Name_bottom"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="1dp"
-                    android:text="Name  :"
-                    android:textColor="#000"
-                    android:textSize="25sp" />
-
-                <TextView
-                    android:id="@+id/Name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="75dp"
-                    android:gravity="start"
-                    android:layout_toRightOf="@+id/med_Name_bottom"
-                    android:text="Crocin"
-                    android:textColor="#000"
-                    android:textSize="25sp" />
-
-                <TextView
-                    android:id="@+id/botton_price"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/med_Name_bottom"
-                    android:layout_marginTop="25dp"
-                    android:text="Price"
-                    android:textColor="#000"
-                    android:textSize="25sp" />
-
-                <TextView
-                    android:id="@+id/botton_price_name"
-
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignBaseline="@+id/botton_price"
-                    android:layout_alignBottom="@+id/botton_price"
-                    android:layout_alignEnd="@+id/Name"
-                    android:gravity="start"
-                    android:layout_marginLeft="75dp"
-                    android:layout_alignRight="@+id/Name"
-                    android:text="₹5"
-                    android:textColor="#000"
-                    android:textSize="25sp" />
-
-                <TextView
-                    android:id="@+id/category"
-                    android:text="Category"
-                    android:layout_marginTop="25dp"
-                    android:textColor="#000"
-                    android:textSize="25sp"
-                    android:layout_below="@+id/botton_price_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-
-                <TextView
-                    android:id="@+id/category_name"
-                    android:text="Paracetomol"
-                    android:textColor="#000"
-                    android:textSize="25sp"
-                    android:gravity="start"
-                    android:layout_below="@+id/botton_price_name"
-                    android:layout_toRightOf="@+id/category"
-                    android:layout_alignBaseline="@+id/category"
-                    android:layout_marginLeft="70dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                android:layout_height="wrap_content" />
 
 
-                <TextView
-                    android:id="@+id/botton_Usage"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/category"
-                    android:layout_marginTop="25dp"
-                    android:text="Usage "
-                    android:textColor="#000"
-                    android:textSize="25sp" />
 
-                <TextView
-                    android:id="@+id/botton_USage_text"
+        </RelativeLayout>
 
-                    android:layout_width="200dp"
-                    android:layout_marginLeft="70dp"
-                    android:layout_height="wrap_content"
-                    android:layout_alignBaseline="@+id/botton_Usage"
-
-
-                    android:layout_below="@+id/category_name"
-                    android:layout_toRightOf="@+id/botton_Usage"
-                    android:text="It is used for bringing down the fever
-and bring body temperature to normal"
-                    android:textColor="#000"
-                    android:textSize="25sp" />
-
-                <TextView
-                    android:id="@+id/sideEffects"
-                    android:layout_width="150dp"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/botton_USage_text"
-                    android:text="Avoid usage During"
-
-                    android:textColor="#000"
-                    android:textSize="25sp" />
-
-                <TextView
-                    android:id="@+id/sideEffectsText"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignBaseline="@+id/sideEffects"
-                    android:layout_toRightOf="@+id/sideEffects"
-                    android:text="Avoid Using when consumed alcohol and during pregnancy"
-                    android:textColor="#000"
-                    android:textSize="25sp" />
-
-
-            </RelativeLayout>
-
-        </ScrollView>
     </android.support.v7.widget.CardView>
+
+
 
 </RelativeLayout>
